# Distributed-Automations

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
automation/: Automation.c  Automation.h  DistributedDevice.c  DistributedDevice.h  DistributedServer.c  DistributedServer.h  MatterAPI.c  MatterAPI.h
components/: singleton.h
components/DistributedAutomation/: CMakeLists.txt  DistributedDevice.c  DistributedDevice.cpp  DistributedDevice.h  DistributedDevice.hpp  DistributedMatterAPI.c  DistributedMatterAPI.cpp  DistributedMatterAPI.h  DistributedMatterAPI.hpp  DistributedServer.c  DistributedServer.cpp  DistributedServer.h  DistributedServer.hpp
components/DistributedAutomation/Automation/: Action.c  Action.h  Automation.c  Automation.cpp  Automation.h  Automation.hpp  AutomationConstant.h  Condition.c  Condition.h  Trigger.c  Trigger.h
components/DistributedAutomation/Automation/Action/: Action.cpp  Action.hpp  ActionCallService.cpp  ActionCallService.hpp  ActionDelay.cpp  ActionDelay.hpp
components/DistributedAutomation/Automation/Condition/: Condition.cpp  Condition.hpp  ConditionLogical.cpp  ConditionLogical.hpp  ConditionNumericState.cpp  ConditionNumericState.hpp  ConditionState.cpp  ConditionState.hpp  ConditionStringState.cpp  ConditionStringState.hpp  ConditionTime.cpp  ConditionTime.hpp  ConditionTrigger.cpp  ConditionTrigger.hpp
components/DistributedAutomation/Automation/Trigger/: Trigger.cpp  Trigger.hpp  TriggerNumericState.cpp  TriggerNumericState.hpp  TriggerState.cpp  TriggerState.hpp  TriggerStringState.cpp  TriggerTime.cpp  TriggerTime.hpp  TriggerTimePattern.cpp  TriggerTimePattern.hpp
components/Test/: Test.cpp  Test.hpp  TestAction.cpp  TestAction.h  TestAutomation.cpp  TestAutomation.h  TestCondition.cpp  TestCondition.h  TestDistributedDevice.cpp  TestDistributedDevice.hpp  TestTrigger.cpp  TestTrigger.h
components/Test/Test_DistributedAutomation/Test_Automation/: Test_Action.c  Test_Action.h  Test_Automation.c  Test_Automation.h  Test_Condition.c  Test_Condition.h  Test_Trigger.c  Test_Trigger.h
components/Utils/: CMakeLists.txt  DistributedServer.c  State.hpp  VectorUtils.c  VectorUtils.h
